more wsgi testing

--- a/nagdash.cfg
+++ b/nagdash.cfg
@@ -2,3 +2,4 @@ DEBUG=True
 SECRET_KEY="YouShouldReallyChangeThis!!!J!RI#()AVAJ#(RI@)(FJQ)A@Nq098hcq2jpofmq029"
 PERMANENT_SESSION_LIFETIME=32400
 MAX_CONTENT_LENGTH=102400
+STATUS_FILE='/home/rkutilus/public_html/dashboard/status.dat'
