--- a/nagdash.cfg
+++ b/nagdash.cfg
@@ -3,4 +3,5 @@ SECRET_KEY="YouShouldReallyChangeThis!!!J!RI#()AVAJ#(RI@)(FJQ)A@Nq098hcq2jpofmq0
 PERMANENT_SESSION_LIFETIME=32400
 MAX_CONTENT_LENGTH=102400
 STATUS_FILE='/var/nagios/status.dat'
-DATABASE = 'nagdash.db'
+DATABASE='/home/rkutilus/public_html/dashboard/nagdash.db'
+FILTERPATH='/home/rkutilus/public_html/dashboard/filters'
