eliminating unneeded configs and taking advantage of flask's instances

--- a/instance.example/nagdash.cfg
+++ b/instance.example/nagdash.cfg
@@ -1,7 +1,5 @@
-DEBUG=True
+DEBUG=False
 SECRET_KEY="YouShouldReallyChangeThis!!!J!RI#()AVAJ#(RI@)(FJQ)A@Nq098hcq2jpofmq029"
 PERMANENT_SESSION_LIFETIME=32400
 MAX_CONTENT_LENGTH=102400
 STATUS_FILE='/var/nagios/status.dat'
-DATABASE='/home/rkutilus/public_html/dashboard/nagdash.db'
-FILTERPATH='/home/rkutilus/public_html/dashboard/filters'
