load view list from database, default views in config file

--- a/instance.example/nagdash.cfg
+++ b/instance.example/nagdash.cfg
@@ -4,3 +4,4 @@ PERMANENT_SESSION_LIFETIME=32400
 MAX_CONTENT_LENGTH=102400
 STATUS_FILE='/var/nagios/status.dat'
 NAG_BASE_URL='/nagios/'
+DEFAULT_VIEWS=['load']
